Collection attachment rotate image implemented. Collector log completed, now temperature's uid's and name's can be toggled in the main table view.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -71,6 +71,7 @@
 
             <script src="{{ asset('bundles/app/js/app/filters/gmt.js') }}"></script>
             <script src="{{ asset('bundles/app/js/app/filters/filterTranslate.js') }}"></script>
+            <script src="{{ asset('bundles/app/js/app/filters/decacheSrc.js') }}"></script>
 
             <script src="{{ asset('bundles/app/js/app/datasets/languages.js') }}"></script>
             <script src="{{ asset('bundles/app/js/app/datasets/roles.js') }}"></script>
