--- a/src/AdministrationBundle/Resources/views/configuration/stores.html.twig
+++ b/src/AdministrationBundle/Resources/views/configuration/stores.html.twig
@@ -17,7 +17,7 @@
                                     <i class="fa fa-map-marker"></i> {{ ng.translate('CONFIGURATION.STORES') }}
                                 </h4>
                                 <hr/>
-                                <div class="well">
+                                <div class="well table-responsive">
                                     <section st-table="storesCollection" st-safe-src="stores.stores()">
                                         <div class="row">
                                             <div class="col-md-3 col-xs-6">
