--- a/src/AdministrationBundle/Resources/views/installation/sensors.html.twig
+++ b/src/AdministrationBundle/Resources/views/installation/sensors.html.twig
@@ -15,7 +15,7 @@
                                     <i class="fa fa-sitemap"></i> {{ ng.translate('INSTALLATION.SENSORS') }}
                                 </h4>
                                 <hr/>
-                                <div class="well">
+                                <div class="well table-responsive">
                                     <section st-table="sensorsCollection" st-safe-src="sensors.sensors()">
                                         <div class="row">
                                             <div class="col-md-3 col-xs-6">
