--- a/src/AdministrationBundle/Resources/views/maintenance/general/stores.html.twig
+++ b/src/AdministrationBundle/Resources/views/maintenance/general/stores.html.twig
@@ -14,9 +14,7 @@
                         <div class="row">
                             <div class="panel-body">
                                 <h4 ng-cloak>
-                                    {% verbatim %}
-                                        <i class="fa fa-fw fa-wrench"></i> {{ 'MAINTENANCE.LABEL' | translate }} - {{ 'MAINTENANCE.GENERAL' | translate }}
-                                    {% endverbatim %}
+                                    <i class="fa fa-fw fa-wrench"></i> {{ ng.translate('MAINTENANCE.LABEL') }} - {{ ng.translate('MAINTENANCE.GENERAL') }}
                                 </h4>
                                 <hr/>
                                 <div class="well">
