--- a/src/AdministrationBundle/Resources/views/companies/companies.html.twig
+++ b/src/AdministrationBundle/Resources/views/companies/companies.html.twig
@@ -17,7 +17,7 @@
                                     <i class="fa fa-building-o"></i> {{ ng.translate('COMPANY.COMPANIES') }}
                                 </h4>
                                 <hr/>
-                                <div class="well">
+                                <div class="well table-responsive">
                                     <section st-table="companiesCollection" st-safe-src="companies.companies()">
                                         <div class="row">
                                             <div class="col-md-3 col-xs-6">
