--- a/src/AdministrationBundle/Resources/views/maintenance/periodically/maintenance_form.html.twig
+++ b/src/AdministrationBundle/Resources/views/maintenance/periodically/maintenance_form.html.twig
@@ -84,11 +84,13 @@
                         <button class="btn btn-xs btn-primary pull-left" style="margin-top: 5px; margin-left: 5px;" ng-click="editAttachment(attachment.Id)"><i class="fa fa-fw fa-pencil"></i></button>
                         <button class="btn btn-xs btn-danger pull-right" style="margin-top: 5px; margin-right: 5px;" ng-click="deleteAttachment(attachment.Id)"><i class="fa fa-fw fa-remove"></i></button>
                         <div class="panel-body" style="min-height:150px;">
-                            <div ng-if="attachment.Type == 1" class="valign">
-                                <img ng-click="showAttachment(attachment)" ng-src="{{ attachmentUrl(attachment.Id) }}" width="100"/>
-                            </div>
-                            <div ng-if="attachment.Type == 2" class="valign">
-                                <a ng-href="{{ attachmentUrl(attachment.Id) }}" download><i class="fa fa-fw fa-file-pdf-o fa-5x"></i></a>
+                            <div class="row text-center">
+                                <div ng-if="attachment.Type == 1">
+                                    <img ng-click="showAttachment(attachment)" ng-src="{{ attachmentUrl(attachment.Id) }}" width="100"/>
+                                </div>
+                                <div ng-if="attachment.Type == 2">
+                                    <a ng-href="{{ attachmentUrl(attachment.Id) }}" download><i class="fa fa-fw fa-file-pdf-o fa-5x"></i></a>
+                                </div>
                             </div>
                         </div>
                         <div class="panel-footer">
