--- a/src/AdministrationBundle/Resources/views/notifications/closed_notifications.html.twig
+++ b/src/AdministrationBundle/Resources/views/notifications/closed_notifications.html.twig
@@ -17,7 +17,7 @@
                                     <i class="fa fa-exclamation-triangle"></i> {{ ng.translate('NOTIFICATIONS.CLOSED_NOTIFICATIONS') }}
                                 </h4>
                                 <hr/>
-                                <div class="well">
+                                <div class="well table-responsive">
                                     <section st-table="inputsCollection" st-pipe="getClosedInputNotifications" st-persist="inputTable">
                                         <div class="row">
                                             <div class="col-md-12 col-xs-12">
@@ -85,7 +85,7 @@
                                 </div>
 
                                 <hr/>
-                                <div class="well">
+                                <div class="well table-responsive">
                                     <section st-table="temperaturesCollection" st-pipe="getClosedTemperatureNotifications" st-persist="temperatureTable">
                                         <div class="row">
                                             <div class="col-md-12 col-xs-12">
