--- a/src/AdministrationBundle/Resources/views/notifications/open_notifications.html.twig
+++ b/src/AdministrationBundle/Resources/views/notifications/open_notifications.html.twig
@@ -17,7 +17,7 @@
                                     <i class="fa fa-exclamation-triangle"></i> {{ ng.translate('NOTIFICATIONS.OPEN_NOTIFICATIONS') }}
                                 </h4>
                                 <hr/>
-                                <div class="well">
+                                <div class="well table-responsive">
                                     <section st-table="inputsCollection" st-safe-src="notifications.inputNotifications()">
                                         <div class="row">
                                             <div class="col-md-3 col-xs-6">
@@ -91,7 +91,7 @@
                                 </div>
 
                                 <hr/>
-                                <div class="well">
+                                <div class="well table-responsive">
                                     <section st-table="temperaturesCollection" st-safe-src="notifications.temperatureNotifications()">
                                         <div class="row">
                                             <div class="col-md-3 col-xs-6">
