--- a/src/AdministrationBundle/Resources/views/regions/regions.html.twig
+++ b/src/AdministrationBundle/Resources/views/regions/regions.html.twig
@@ -17,7 +17,7 @@
                                     <i class="fa fa-map-marker"></i> {{ ng.translate('REGIONS.LABEL') }}
                                 </h4>
                                 <hr/>
-                                <div class="well">
+                                <div class="well table-responsive">
                                     <section st-table="regionsCollection" st-safe-src="regions.regions()">
                                         <div class="row">
                                             <div class="col-md-3 col-xs-6">
