--- a/src/AdministrationBundle/Resources/views/users/users.html.twig
+++ b/src/AdministrationBundle/Resources/views/users/users.html.twig
@@ -17,7 +17,7 @@
                                     <i class="fa fa-users"></i> {{ ng.translate('USERS') }}
                                 </h4>
                                 <hr/>
-                                <div class="well">
+                                <div class="well table-responsive">
                                     <section st-table="usersCollection" st-safe-src="users.users()">
                                         <div class="row">
                                             <div class="col-md-3 col-xs-6">
