--- a/src/AppBundle/Resources/views/store/inventory_info.html.twig
+++ b/src/AppBundle/Resources/views/store/inventory_info.html.twig
@@ -43,11 +43,13 @@
                 <div ng-repeat="attachment in collections.collection().Attachments" class="col-md-3 col-xs-12">
                     <div class="panel panel-default">
                         <div class="panel-body" style="min-height:150px;">
-                            <div ng-if="attachment.Type == 1" class="valign">
-                                <img ng-click="showAttachment(attachment)" ng-src="{{ attachmentUrl(attachment.Id) }}" width="100"/>
-                            </div>
-                            <div ng-if="attachment.Type == 2" class="valign">
-                                <a ng-href="{{ attachmentUrl(attachment.Id) }}" download><i class="fa fa-fw fa-file-pdf-o fa-5x"></i></a>
+                            <div class="row text-center">
+                                <div ng-if="attachment.Type == 1">
+                                    <img ng-click="showAttachment(attachment)" ng-src="{{ attachmentUrl(attachment.Id) }}" width="100"/>
+                                </div>
+                                <div ng-if="attachment.Type == 2">
+                                    <a ng-href="{{ attachmentUrl(attachment.Id) }}" download><i class="fa fa-fw fa-file-pdf-o fa-5x"></i></a>
+                                </div>
                             </div>
                         </div>
                         <div class="panel-footer">
