--- a/src/AppBundle/Resources/views/store/maintenance.html.twig
+++ b/src/AppBundle/Resources/views/store/maintenance.html.twig
@@ -5,7 +5,7 @@
                 <i class="fa fa-fw fa-wrench"></i> {{ ng.translate('MAINTENANCE.LABEL') }} {{ ng.translate('MAINTENANCE.FOR') }} {{ store.Name }}
             </h4>
             <hr/>
-            <div class="well">
+            <div class="well table-responsive">
                 <section st-table="collectionsCollection" st-safe-src="collections.collections()">
                     <div class="row">
                         <div class="col-md-3 col-xs-6">
