Implemented maintenance log functionality, also when periodically maintenance occurs, this will be logged to keep one complete log of all actions taken for a store.

--- a/src/AdministrationBundle/Resources/views/header/header.html.twig
+++ b/src/AdministrationBundle/Resources/views/header/header.html.twig
@@ -50,6 +50,7 @@
                         <ul class="dropdown-menu">
                             <li><a href="{{ path('administration_maintenance_general') }}" ng-cloak> {{ ng.translate('MAINTENANCE.GENERAL') }} </a></li>
                             <li><a href="{{ path('administration_maintenance_periodically') }}" ng-cloak> {{ ng.translate('MAINTENANCE.PERIODICALLY') }} </a></li>
+                            <li><a href="{{ path('administration_maintenance_log') }}" ng-cloak> {{ ng.translate('MAINTENANCE.LOG') }} </a></li>
                         </ul>
                     </li>
 
