Implemented phone friendly administration dashboard.

--- a/src/AdministrationBundle/Resources/views/configuration/stores.html.twig
+++ b/src/AdministrationBundle/Resources/views/configuration/stores.html.twig
@@ -14,7 +14,7 @@
                         <div class="row">
                             <div class="panel-body">
                                 <h4 ng-cloak>
-                                    <i class="fa fa-map-marker"></i> {{ ng.translate('CONFIGURATION.STORES') }}
+                                    <i class="fa fa-map-marker"></i> {{ ng.translate('CONFIGURATION.LABEL') }} - {{ ng.translate('CONFIGURATION.STORES') }}
                                 </h4>
                                 <hr/>
                                 <div class="well table-responsive">
