--- a/src/AdministrationBundle/Resources/views/dashboard/dashboard.html.twig
+++ b/src/AdministrationBundle/Resources/views/dashboard/dashboard.html.twig
@@ -8,6 +8,7 @@
             {%  endblock %}
 
             {% block page %}
+                {%  include 'AdministrationBundle:dashboard:menu.html.twig' %}
             {% endblock %}
 
     {% endif %}
