--- a/src/AdministrationBundle/Resources/views/installation/sensors.html.twig
+++ b/src/AdministrationBundle/Resources/views/installation/sensors.html.twig
@@ -12,7 +12,7 @@
                         <div class="row">
                             <div class="panel-body">
                                 <h4 ng-cloak>
-                                    <i class="fa fa-sitemap"></i> {{ ng.translate('INSTALLATION.SENSORS') }}
+                                    <i class="fa fa-sitemap"></i> {{ ng.translate('CONFIGURATION.LABEL') }} - {{ ng.translate('INSTALLATION.SENSORS') }}
                                 </h4>
                                 <hr/>
                                 <div class="well table-responsive">
