--- a/src/AdministrationBundle/Resources/views/regions/regions.html.twig
+++ b/src/AdministrationBundle/Resources/views/regions/regions.html.twig
@@ -14,7 +14,7 @@
                         <div class="row">
                             <div class="panel-body">
                                 <h4 ng-cloak>
-                                    <i class="fa fa-map-marker"></i> {{ ng.translate('REGIONS.LABEL') }}
+                                    <i class="fa fa-globe"></i> {{ ng.translate('REGIONS.LABEL') }}
                                 </h4>
                                 <hr/>
                                 <div class="well table-responsive">
