--- a/src/AdministrationBundle/Resources/views/notifications/open_notifications.html.twig
+++ b/src/AdministrationBundle/Resources/views/notifications/open_notifications.html.twig
@@ -14,7 +14,7 @@
                         <div class="row">
                             <div class="panel-body">
                                 <h4 ng-cloak>
-                                    <i class="fa fa-exclamation-triangle"></i> {{ ng.translate('NOTIFICATIONS.OPEN_NOTIFICATIONS') }}
+                                    <i class="fa fa-circle-o"></i> {{ ng.translate('NOTIFICATIONS.OPEN_NOTIFICATIONS') }}
                                 </h4>
                                 <hr/>
                                 <div class="well table-responsive">
