Implemented sensor log, for ds sensors and inputs.

--- a/src/AdministrationBundle/Resources/views/dashboard/menu.html.twig
+++ b/src/AdministrationBundle/Resources/views/dashboard/menu.html.twig
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="panel panel-default">
-                    <div class="panel-heading menu-header cursor-pointer" ng-cloak>
+                    <div class="panel-heading menu-header cursor-default" ng-cloak>
                         <i class="fa fa-fw fa-user fa-2x"></i> {{ ng.translate('TCM') }} - {{ '{{ AUTH.user().Name }}' }}
                     </div>
                     <div class="panel-body">
@@ -29,7 +29,7 @@
             </div>
             <div class="col-md-4">
                 <div class="panel panel-green">
-                    <div class="panel-heading menu-header cursor-pointer" ng-cloak>
+                    <div class="panel-heading menu-header cursor-default" ng-cloak>
                         <i class="fa fa-fw fa-users fa-2x"></i> {{ ng.translate('USERS') }}
                     </div>
                     <div class="panel-body">
@@ -43,7 +43,7 @@
             </div>
             <div class="col-md-4">
                 <div class="panel panel-primary">
-                    <div class="panel-heading menu-header cursor-pointer" ng-cloak>
+                    <div class="panel-heading menu-header cursor-default" ng-cloak>
                         <i class="fa fa-fw fa-building-o fa-2x"></i> {{ ng.translate('COMPANY.COMPANIES') }}
                     </div>
                     <div class="panel-body">
@@ -77,7 +77,7 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="panel panel-info">
-                    <div class="panel-heading menu-header cursor-pointer" ng-cloak>
+                    <div class="panel-heading menu-header cursor-default" ng-cloak>
                         <i class="fa fa-fw fa-gears fa-2x"></i> {{ ng.translate('CONFIGURATION.LABEL') }}
                     </div>
                     <div class="panel-body">
@@ -103,7 +103,7 @@
             </div>
             <div class="col-md-4">
                 <div class="panel panel-yellow">
-                    <div class="panel-heading menu-header cursor-pointer" ng-cloak>
+                    <div class="panel-heading menu-header cursor-default" ng-cloak>
                         <i class="fa fa-fw fa-wrench fa-2x"></i> {{ ng.translate('MAINTENANCE.LABEL') }}
                     </div>
                     <div class="panel-body">
@@ -129,7 +129,7 @@
             </div>
             <div class="col-md-4">
                 <div class="panel panel-red">
-                    <div class="panel-heading menu-header cursor-pointer" ng-cloak>
+                    <div class="panel-heading menu-header cursor-default" ng-cloak>
                         <i class="fa fa-fw fa-exclamation-triangle fa-2x"></i> {{ ng.translate('NOTIFICATIONS.LABEL') }}
                     </div>
                     <div class="panel-body">
