--- a/src/AppBundle/Resources/public/css/style.css
+++ b/src/AppBundle/Resources/public/css/style.css
@@ -261,6 +261,10 @@ body {
     cursor: pointer;
 }
 
+.cursor-default {
+    cursor: default;
+}
+
 .profile-well {
     min-height: 20px;
     padding: 19px;
