Implemented graphical sensor information (log based).

--- a/src/AppBundle/Resources/views/store/store.html.twig
+++ b/src/AppBundle/Resources/views/store/store.html.twig
@@ -37,5 +37,6 @@
     <script src="{{ asset('bundles/app/js/app/datasets/stores.js') }}"></script>
     <script src="{{ asset('bundles/app/js/app/datasets/sensors.js') }}"></script>
     <script src="{{ asset('bundles/app/js/app/datasets/charts.js') }}"></script>
+    <script src="{{ asset('bundles/app/js/app/datasets/sensorlog.js') }}"></script>
 {% endblock %}
 
