--- a/src/AppBundle/Resources/views/store/sensors.html.twig
+++ b/src/AppBundle/Resources/views/store/sensors.html.twig
@@ -121,8 +121,13 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-xs-7">
+                                <div class="col-xs-5">
                                     <div class="pull-right sensor-updated"><small><i class="fa fa-fw fa-clock-o"></i> {{ sensor.DataCollectedAt.date | GMT: 'HH:mm:ss DD-MM-YYYY' }}</small></div>
+                                </div>
+                                <div class="col-xs-2">
+                                    <button class="btn btn-sm btn-info" ng-click="showSensorLog(sensor)" ng-cloak>
+                                        <i class="fa fa-fw fa-line-chart"></i>
+                                    </button>
                                 </div>
                             </div>
                         </div>
