--- a/src/AdministrationBundle/Resources/views/maintenance/periodically/maintenance_form.html.twig
+++ b/src/AdministrationBundle/Resources/views/maintenance/periodically/maintenance_form.html.twig
@@ -109,7 +109,7 @@
     </h5>
     <div class="well">
         {% verbatim %}
-        <ng-dropzone class="dropzone" options="dzOptions" callbacks="dzCallbacks" methods="dzMethods"></ng-dropzone>
+        <ng-dropzone id="maintenance" class="dropzone" options="dzOptions" callbacks="dzCallbacks" methods="dzMethods"></ng-dropzone>
         {% endverbatim %}
     </div>
 
