--- a/src/AdministrationBundle/Resources/views/inventory/inventory_info.html.twig
+++ b/src/AdministrationBundle/Resources/views/inventory/inventory_info.html.twig
@@ -50,7 +50,7 @@
                     <div class="panel panel-default">
                         <div class="panel-body" style="min-height:150px;">
                             <div ng-if="attachment.Type == 1" class="valign">
-                                <img ng-click="showAttachment(attachment)" ng-src="{{ attachmentUrl(attachment.Id) }}" width="100"/>
+                                <img ng-click="showAttachment(attachment)" ng-src="{{ attachmentUrl(attachment.Id) }}" height="130"/>
                             </div>
                             <div ng-if="attachment.Type == 2" class="valign">
                                 <a ng-href="{{ attachmentUrl(attachment.Id) }}" download><i class="fa fa-fw fa-file-pdf-o fa-5x"></i></a>
