--- a/src/AppBundle/Resources/views/store/inventory_info.html.twig
+++ b/src/AppBundle/Resources/views/store/inventory_info.html.twig
@@ -45,7 +45,7 @@
                         <div class="panel-body" style="min-height:150px;">
                             <div class="row text-center">
                                 <div ng-if="attachment.Type == 1">
-                                    <img ng-click="showAttachment(attachment)" ng-src="{{ attachmentUrl(attachment.Id) }}" width="100"/>
+                                    <img ng-click="showAttachment(attachment)" ng-src="{{ attachmentUrl(attachment.Id) }}" height="130"/>
                                 </div>
                                 <div ng-if="attachment.Type == 2">
                                     <a ng-href="{{ attachmentUrl(attachment.Id) }}" download><i class="fa fa-fw fa-file-pdf-o fa-5x"></i></a>
